Correction partielle version mobile: Header - section outils recherche - Articles populaires.

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ p {
 }
 .bouton_geoloc i{
     width:14px;
-    height:18px;
 }
 .champ_recherche_ville {
     border: 1px #F2F2F2 solid;
@@ -463,7 +462,7 @@ p {
         font-size: small;
     }
 }
-@media screen and ( max-width: 768px) {
+@media screen and ( max-width: 767px) {
     /* Voici le second point de rupture situé à 768px. Ici on adapte le site à un format mobile.
     Les changements sont plus important ici. 
     Une attention particulière a été donnée à l'adaptabilité de la largeur des conteneurs/éléments/ espacements 
@@ -481,12 +480,20 @@ p {
     - Les cartes de la section Activité sont cette fois disposés en colonne.
     - Le footer est lui aussi disposé en colonne.
     -Les tailles de police, de conteneurs etc ont été globalement réajustés pour une meilleure lisibilité.*/
+    .page {
+        width: 100%;
+        font-size: x-large;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    body{
+        margin:0px;
+    }
     .header{
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 130px;
-        padding-bottom: 30px;
+        height: auto;
     }
     .logo_booki{
         display: flex;
@@ -495,12 +502,16 @@ p {
         margin-bottom: 40px;
         margin-left: 1%;
     }
+    .logo_booki img {
+        width: 5em;
+        height: 1.5em;
+        object-fit: fill;
+    }
     .bloc_nav{
         width: 100%;
         display: flex;
         justify-content: center;
         padding-right: 0px;
-        font-size: small;
     }
     .liste_nav{
         width: 100%;
@@ -508,6 +519,7 @@ p {
     .liens_nav {
         width: 100%;
         padding-bottom: 23px;
+        border-bottom: 2px #F2F2F2 solid;
     }
     ul {
         width: 100%;
@@ -515,6 +527,7 @@ p {
     }
     .liste_nav a{
         margin-left: 0px;
+        font-size: x-large;
     }
     .liens_nav a:hover{
         border-top: none;
@@ -522,23 +535,43 @@ p {
     .liens_nav:hover {
         border-bottom: 2px #0065FC solid;
     }
-    .page {
-        font-size: medium;
-    }
     h1 {
-        font-size: large;
+        font-size: x-large;
+        margin-left: 5%;
+    }
+    #outils_recherche p {
+        margin-left: 5%;
     }
     .container_barre_recherche{
-        width: 80%;
+        width: 100%;
+        height: 4em;
         display: flex;
         justify-content: center;
-        padding-left: 10%;
+        padding: 0;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
     .bouton_geoloc{
-        width: 10%;
+        width: 15%;
+        height: 100%;
+        border-radius: 30% 0 0 30%;
+    }
+    .champ_recherche_ville {
+        width: 60%;
+        height: 97%;
+    }
+    .champ_recherche_ville p input{
+        margin: 0;
+        width: 15em;
+    }
+    #lieu::placeholder {
+        font-size: x-large;
+        width: fit-content;
     }
     .bouton_recherche{
-        width: 12%;
+        width: 15%;
+        height: 100%;
+        border-radius: 0 30% 30% 0;
     }
     .bouton_recherche b{
         display: none;
@@ -551,31 +584,47 @@ p {
         align-items: flex-start;
         justify-content: center;
         width: 100%;
-        height: 200px;
+        height: auto;
+    }
+    .container_filtres h2{
+        font-size: larger;
     }
     .boutons_filtre {
-        width: 500px;
-        height: 150px;
+        width:100%;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         align-self: center;
-        padding-left: 130px;
+    }
+    .boutons_filtre div i {
+        margin-left: 8%;
     }
     .boutons_filtre div p{
         font-size: small;
     }
     .boutons_filtre div {
-        width:160px;
+        width:40%;
+    }
+    .bouton_filtre {
+        height: 4.3em;
+        border-radius: 30px;
+        margin-left: 5%;
+        margin-top: 5%;
+        font-size: small;
+    }
+    .container_info_sup i {
+        margin-right: -15px;
+        height: 2em;
     }
     .section_articles_hebergements {
-        width: 90%;
+        width: 100%;
+        height: auto;
         flex-direction: column-reverse;
         justify-content: center;
-        margin-left: 15%;
     }
     .section_hebergements_ville {
-        width: 80%;
-        height: 1500px;
+        width: 100%;
+        height: auto;
         flex-direction: column;
         justify-content: flex-start;
         margin-bottom: 0px;
@@ -604,26 +653,40 @@ p {
         height: 200px;
     }
     .container_articles_populaires {
-        width: 80%;
-        height: 580px;
+        width: 100%;
+        height: auto;
         flex-direction: column;
         border-radius: 0px;
     }
+    .container_articles_populaires h2 {
+        font-size: larger;
+    }
     .articles_populaires {
         flex-direction: column;
-        width: 80%;
-        justify-content: space-between;
+        width: 90%;
+        justify-content: space-around;
+    }
+    .articles_populaires article {
+        height: 30%;
     }
     .card_pop {
         width: 100%;
-        height: 144px;
+        height: 100%;
         margin-right: 0px;
+        font-size: large;
     }
     .container_article_pop_description {
         width: 55%;
+        float: left;
+        box-sizing: border-box;
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
     .card_pop img {
-        width: 150px;
+        width: 45%;
+        float: left;
+        box-sizing: border-box;
+        margin: 2%;
     }
     .section_activités {
         flex-direction: column;
